# blackjack-rust

./: .gitignore  Cargo.toml  README.md  index.html  index.scss
.obsidian/: workspace.json
src/: app.rs  buttons.rs  card.rs  deck.rs  game.rs  main.rs  mod.rs  player.rs
src/card/: card_utils.rs
