[package]
name = "learn_a_language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
yew = { version = "0.20.0", features = ["csr"] }
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
gloo-console = "0.2.3"
wasm-bindgen = "0.2.84"
stylist = {version = "0.12.0", features = ["yew_integration"]}
